[gd_scene load_steps=3 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="PathTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="EnemyLOS" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 3

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
